# cpp_template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
App/: App.cpp  CMakeLists.txt
CMake/: CompilerSetup.cmake
Lib/: CMakeLists.txt  Lib.c  Lib.h
